add cmake files and vcxproj to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,14 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.sln
+*.vcxproj
+*.vcxproj.filters
+
+# CMake
+*.cmake
+.cmake
+.idea
 
 # Chutzpah Test files
 _Chutzpah*
