--- a/Triviador/Triviador/CMakeLists.txt
+++ b/Triviador/Triviador/CMakeLists.txt
@@ -1,18 +1,17 @@
 ﻿# CMakeList.txt : CMake project for Triviador, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.14)
 
 # Add source to this project's executable.
 
-#set(CMAKE_TOOLCHAIN_FILE "C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake")
+add_executable (Triviador
+	"Triviador.h"
+	"Triviador.cpp"
 
-add_executable (Triviador 
-	"src/Triviador.cpp" 
-	"include/Triviador.h"
 )
 
 add_subdirectory("UI")
 add_subdirectory("Database")
 
-# TODO: Add tests and install targets if needed.
+# TODO: Add tests and install targets if needed
