finish build system with cmake and add dummy Qt window

--- a/Triviador/Triviador/Database/CMakeLists.txt
+++ b/Triviador/Triviador/Database/CMakeLists.txt
@@ -1,4 +1,4 @@
-#include(C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake)
+include(C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake)
 find_package(SqliteOrm CONFIG REQUIRED)
 
 add_executable(Database
