--- a/Triviador/Triviador/UI/CMakeLists.txt
+++ b/Triviador/Triviador/UI/CMakeLists.txt
@@ -1,4 +1,3 @@
-cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_CONFIGURATION_TYPES "Release;RelWithDebInfo" CACHE STRING "" FORCE)
 
@@ -11,34 +10,34 @@ find_package(Qt6Core REQUIRED)
 find_package(Qt6Widgets REQUIRED)
 
 #=================== INCLUSION OF Project Files ====================#
-set(FORMS_DIR "${CMAKE_SOURCE_DIR}/forms")
-set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
-set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
+set(FORMS_DIR "forms")
+set(INCLUDE_DIR "include")
+set(SOURCE_DIR "src")
 
 include_directories(${FORMS_DIR})
 include_directories(${INCLUDE_DIR})
 include_directories(${SOURCE_DIR})
 
 file(GLOB_RECURSE SOURCES
-        "${FORMS_DIR}/*.ui"
-        "${FORMS_DIR}/*.qrc"
-        "${INCLUDE_DIR}/*.h"
-        "${SOURCE_DIR}/*.cpp"
-        )
+    "${FORMS_DIR}/*.ui"
+    "${FORMS_DIR}/*.qrc"
+    "${INCLUDE_DIR}/*.h"
+    "${SOURCE_DIR}/*.cpp"
+)
 
 #=================== SETUP EXECTUABLE ====================#
 # Enable debug logging on RELWITHDEBINFO configuration
 set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
-        $<$<CONFIG:RELWITHDEBINFO>:QT_MESSAGELOGCONTEXT>
-        )
+    $<$<CONFIG:RELWITHDEBINFO>:QT_MESSAGELOGCONTEXT>
+)
 
 # Add the forms directory to the AUTOUIC search paths
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${FORMS_DIR})
 
 # Add the executable
-add_executable(GUI WIN32 ${SOURCES})
+add_executable(GUI ${SOURCES})
 
-# Add the target includes for MY_PROJECT
+# Add the target includes for MY_PROJECT 
 target_include_directories(GUI PRIVATE ${FORMS_DIR})
 target_include_directories(GUI PRIVATE ${INCLUDE_DIR})
 target_include_directories(GUI PRIVATE ${SOURCE_DIR})
