--- a/Triviador/CMakeLists.txt
+++ b/Triviador/CMakeLists.txt
@@ -1,9 +1,16 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
-cmake_minimum_required (VERSION 3.14)
+﻿# CMakeList.txt : CMake project for Triviador, include source and define
+# project specific logic here.
 
-project ("Triviador")
 
-# Include sub-projects.
-add_subdirectory ("Triviador")
+# Add source to this project's executable.
+
+add_executable (Triviador
+	"Triviador.h"
+	"Triviador.cpp"
+
+)
+
+add_subdirectory("UI")
+add_subdirectory("Database")
+
+# TODO: Add tests and install targets if needed
