update CMakeLists and change database to STATIC lib

--- a/Triviador/CMakeLists.txt
+++ b/Triviador/CMakeLists.txt
@@ -3,14 +3,18 @@
 
 
 # Add source to this project's executable.
-
 add_executable (Triviador
 	"Triviador.h"
 	"Triviador.cpp"
-
 )
+
 
 add_subdirectory("UI")
 add_subdirectory("Database")
+
+target_link_libraries(Triviador
+	PUBLIC 
+	Database
+)
 
 # TODO: Add tests and install targets if needed
