link crow into database and cpr into UI

--- a/Triviador/Database/CMakeLists.txt
+++ b/Triviador/Database/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake)
+
 find_package(SqliteOrm CONFIG REQUIRED)
+find_package(Crow CONFIG REQUIRED)
 
 add_library(Database STATIC
     #*.h
@@ -9,6 +11,7 @@ add_library(Database STATIC
     "include/User.h"
     "include/UserStatistics.h"
     "include/DBAccess.h"
+    include/QuestionService.h
     #.cpp
     "src/Game.cpp"
     "src/Question.cpp"
@@ -17,8 +20,13 @@ add_library(Database STATIC
     "src/UserStatistics.cpp"
     "src/DBAccess.cpp"
     "src/main.cpp"
-        )
-target_link_libraries(Database PUBLIC sqlite_orm::sqlite_orm)
+    src/QuestionService.cpp include/QuestionChoiceService.h src/QuestionChoiceService.cpp src/UserStatisticsService.cpp include/UserStatisticsService.h include/UserService.h src/UserService.cpp src/GameService.cpp include/GameService.h)
+
+target_link_libraries(Database
+        PUBLIC
+        Crow::Crow
+        sqlite_orm::sqlite_orm
+)
 
 target_include_directories(Database
     PUBLIC 
