refactor Database/CMakeLists.txt

--- a/Triviador/Database/CMakeLists.txt
+++ b/Triviador/Database/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake)
 
+
 find_package(SqliteOrm CONFIG REQUIRED)
 find_package(Crow CONFIG REQUIRED)
 
@@ -9,9 +10,13 @@ add_library(Database STATIC
     "include/Question.h"
     "include/QuestionChoice.h"
     "include/User.h"
+    "include/UserService.h"
     "include/UserStatistics.h"
     "include/DBAccess.h"
-    include/QuestionService.h
+    "include/QuestionService.h"
+    "include/QuestionChoiceService.h"
+    "include/UserStatisticsService.h"
+    "include/GameService.h"
     #.cpp
     "src/Game.cpp"
     "src/Question.cpp"
@@ -19,8 +24,12 @@ add_library(Database STATIC
     "src/User.cpp"
     "src/UserStatistics.cpp"
     "src/DBAccess.cpp"
-    "src/main.cpp"
-    src/QuestionService.cpp include/QuestionChoiceService.h src/QuestionChoiceService.cpp src/UserStatisticsService.cpp include/UserStatisticsService.h include/UserService.h src/UserService.cpp src/GameService.cpp include/GameService.h)
+    "src/QuestionService.cpp"
+    "src/QuestionChoiceService.cpp"
+    "src/UserStatisticsService.cpp"
+    "src/GameService.cpp"
+    "src/UserService.cpp"
+)
 
 target_link_libraries(Database
         PUBLIC
