Created Server folder and namespace Added Player and Lobby classes for use in Backend class Added endpoints for joining the lobby

--- a/Triviador/CMakeLists.txt
+++ b/Triviador/CMakeLists.txt
@@ -5,8 +5,10 @@
 
 add_subdirectory("UI")
 add_subdirectory("Database")
+add_subdirectory("Server")
 
 target_link_libraries(Triviador
 	PRIVATE
 		Database
+		Server
 )
