Modified CMakeLists files for redundant linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 include(C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake)
 project ("Triviador")
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 add_subdirectory ("Triviador")
