--- a/Triviador/UI/CMakeLists.txt
+++ b/Triviador/UI/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(cpr CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -42,4 +43,5 @@ target_include_directories(GUI
 target_link_libraries(GUI
         Qt6::Widgets
         cpr::cpr
+        nlohmann_json::nlohmann_json
 )
