add dynamic path for background images and implement backend login

--- a/Triviador/UI/CMakeLists.txt
+++ b/Triviador/UI/CMakeLists.txt
@@ -45,3 +45,5 @@ target_link_libraries(GUI
         cpr::cpr
         nlohmann_json::nlohmann_json
 )
+
+add_definitions(-DRESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/Resources")
