Added map, start of game, first question - /game/start - starts game - /game/map/first - gets new map - /game/firstQuestion - gets first question from DB

--- a/Triviador/Server/CMakeLists.txt
+++ b/Triviador/Server/CMakeLists.txt
@@ -6,11 +6,13 @@ add_library(Server STATIC
     "include/Player.h"
     "include/Question.h"
     "include/QuestionChoice.h"
+    "include/Map.h"
     #.cpp
     "src/Backend.cpp"
     "src/Player.cpp"
     "src/Question.cpp"
     "src/QuestionChoice.cpp"
+    "src/Map.cpp"
 )
 
 target_link_libraries(Server
