add validator dll to cmakelists.txt

--- a/Triviador/CMakeLists.txt
+++ b/Triviador/CMakeLists.txt
@@ -6,6 +6,7 @@
 add_subdirectory("UI")
 add_subdirectory("Database")
 add_subdirectory("Server")
+add_subdirectory("Validator")
 
 target_link_libraries(Triviador
 	PRIVATE
