Reworked player class and way to store players

--- a/Triviador/Server/CMakeLists.txt
+++ b/Triviador/Server/CMakeLists.txt
@@ -2,17 +2,14 @@ find_package(Crow CONFIG REQUIRED)
 
 add_library(Server STATIC
     #*.h
+    "include/Status.h"
     "include/Backend.h"
     "include/Player.h"
-    "include/Question.h"
-    "include/QuestionChoice.h"
     "include/Map.h"
     "include/Region.h"
     #.cpp
     "src/Backend.cpp"
     "src/Player.cpp"
-    "src/Question.cpp"
-    "src/QuestionChoice.cpp"
     "src/Map.cpp"
     "src/Region.cpp"
 )
