implement powerup front end logic

--- a/Triviador/UI/CMakeLists.txt
+++ b/Triviador/UI/CMakeLists.txt
@@ -28,7 +28,7 @@ file(GLOB_RECURSE SOURCES
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${FORMS_DIR})
 
 # Add the executable
-add_executable(GUI ${SOURCES} src/lobby.cpp include/lobby.h forms/lobby.ui)
+add_executable(GUI ${SOURCES})
 
 target_include_directories(GUI 
     PUBLIC
